syntax = "proto3";

package fields;

option java_multiple_files = true;
option java_package = "grpc.staff.fields";

message StaffEmailField {
  string email = 1;
}