syntax = "proto3";

package staff;

import "staff/constants/type.proto";

option java_multiple_files = true;
option java_package = "grpc.staff";

service StaffService {
    rpc CheckExistStaffById (StaffIdRequest) returns (CheckExistStaffByIdResponse);
    rpc GetStaffById (StaffIdRequest) returns (GetStaffByIdResponse);
}

message StaffIdRequest {
    int32 id = 1;
}

message StaffResponse {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string job_id = 5;
    constants.StaffGender gender = 6;
    constants.StaffStatus status = 7;
}

message CheckExistStaffByIdResponse {
    bool is_exists = 1;
}

message GetStaffByIdResponse {
    StaffResponse staff = 1;
}